crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__invalid_fractional_separator.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: "lex_invalid(\"0._1\", Mode::Module)"
---
## Tokens
```
[
    (
        Unknown,
        2..3,
    ),
    (
        Int(
            1,
        ),
        3..4,
    ),
    (
        Newline,
        4..4,
    ),
]
```
## Errors
```
[
    LexicalError {
        error: OtherError(
            "Invalid Syntax",
        ),
        location: 2..3,
    },
]
```
