crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__invalid_string_prefix_error.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: "lex(r#\"uf\"hello\"\"#, Mode::Module, TextSize::default())"
---
## Tokens
```
[
    (
        String(
            "hello",
        ),
        0..9,
        TokenFlags(
            DOUBLE_QUOTES,
        ),
    ),
    (
        Newline,
        9..9,
    ),
]
```
## Errors
```
[
    LexicalError {
        error: IncompatibleStringPrefixes(
            'u',
            'f',
        ),
        location: 0..2,
    },
]
```
