crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__ipython_escape_command.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_jupyter_source(source)
---
## Tokens
```
[
    (
        IpyEscapeCommand,
        0..4,
    ),
    (
        Newline,
        4..5,
    ),
    (
        IpyEscapeCommand,
        5..10,
    ),
    (
        Newline,
        10..11,
    ),
    (
        IpyEscapeCommand,
        11..24,
    ),
    (
        Newline,
        24..25,
    ),
    (
        IpyEscapeCommand,
        25..38,
    ),
    (
        Newline,
        38..39,
    ),
    (
        IpyEscapeCommand,
        39..65,
    ),
    (
        Newline,
        65..66,
    ),
    (
        IpyEscapeCommand,
        66..103,
    ),
    (
        Newline,
        103..104,
    ),
    (
        IpyEscapeCommand,
        104..149,
    ),
    (
        Newline,
        149..150,
    ),
    (
        IpyEscapeCommand,
        150..158,
    ),
    (
        Newline,
        158..159,
    ),
    (
        IpyEscapeCommand,
        159..167,
    ),
    (
        Newline,
        167..168,
    ),
    (
        IpyEscapeCommand,
        168..176,
    ),
    (
        Newline,
        176..177,
    ),
    (
        IpyEscapeCommand,
        177..180,
    ),
    (
        Newline,
        180..180,
    ),
]
```
